after reading with Jürgen and Jason 21-22 almost everything integrated but not all yet but have to go to easter meeting

--- a/bindu.tex
+++ b/bindu.tex
@@ -314,9 +314,8 @@ jñānayogaṃ samācaret\dd{} \begin{otherlanguage}{english}\uproman{21}.1\end{
   \tl{\note[type=source, labelb=136, labele=_136e, nosep]{ \approx  YSv (PT p. 835): prāpnoti śāmbhavīmantrān sadā nityaparāyaṇaḥ | yathā nyagrodhavījaṃ hi kṣitau vaptur drumāyate |}
     \app{\lem[wit={ceteri}]{prāpnoti}
       \rdg[wit={E}]{\om}}
-  \app{\lem[type=emendation, resp=egoscr]{śāṃbhavīsattāṃ}
+  \app{\lem[wit={B,P}]{śāmbhavīṃ sattāṃ}
       \rdg[wit={D,U1,U2}]{sāṃbhavīsattāṃ}
-      \rdg[wit={B,P}]{śāmbhavīṃ sattāṃ}
       \rdg[wit={L}]{śāmbhavīṃ sattān}
       \rdg[wit={N1}]{sāṃbhavīṃ satta}
       \rdg[wit={N2}]{sāṃbhavīsattā}
@@ -462,14 +461,14 @@ nityo nirvikāro nirañjanaḥ\dd{} \begin{otherlanguage}{english}\uproman{21}.5
        \paragraph{\uproman{21}.2} Alternatively, wherever one dwells, the world is made of all knowledge. He who knows thus by realisation is also qualified for gnosis. %%%Cf. NT 8.55cd, vāpi = einfach vā + api = vā (im Prinzip metrischer Füller)
      \end{tlate}
      \begin{tlate}[21_3]
-       \paragraph{\uproman{21}.3} The one who is devoted to non-duality always attains the reality of Śāṃbhavī\footnote{Rāmacandra uses the term \textit{śāṃbhavīsattā} as a designation of the ultimate state to be attained by practising Jñānayoga, which he presents as the realization of absolute unity. In medieval Yogatexts, particular in the Rājayoga genre, the feminin noun \textit{śāmbhavī} most often appears in the context of a non-physical \textit{mudrā}, the so-called \textit{śāṃbhavī mudrā}. For a detailed discussion of \textit{śāṃbhavī mudrā}, its influence and all references, see \citeauthor[2013:71-79]{birch2013}. The usage of the feminin noun \textit{śāmbhavī} to qualify a state is uncommon. More frequently one finds the masculine adjective \textit{śāṃbhava} in order to quality an exalted yogic state. See for example \emph{Candrāvalokana} 2, \textit{Haṭhapradīpikā} 4.7, \emph{Anubhavanivedana} 1, \emph{Haṭhatattvakaumudī} 49.27. The idea has its roots in tantric traditions of Śaivism and refers to an meditative state associated with Śambhu (Śiva) (references?).}, just as the seed of the banyan tree scattered onto the ground [always] becomes a tree.
+       \paragraph{\uproman{21}.3} The one who is devoted to non-duality always attains the reality of Śaṃbhu\footnote{Rāmacandra uses the term \textit{śāṃbhavīṃ sattāṃ} as a designation of the ultimate state to be attained by practising Jñānayoga, which he presents as the realization of absolute unity. In medieval Yogatexts, particular in the Rājayoga genre, the feminin noun \textit{śāmbhavī} most often appears in the context of a non-physical \textit{mudrā}, the so-called \textit{śāṃbhavī mudrā}. For a detailed discussion of \textit{śāṃbhavī mudrā}, its influence and all references, see \citeauthor[2013:71-79]{birch2013}. The usage of the feminin noun \textit{śāmbhavī} to qualify a state is uncommon. More frequently one finds the masculine adjective \textit{śāṃbhava} in order to quality an exalted yogic state. See for example \emph{Candrāvalokana} 2, \textit{Haṭhapradīpikā} 4.7, \emph{Anubhavanivedana} 1, \emph{Haṭhatattvakaumudī} 49.27. The idea has its roots in tantric traditions of Śaivism and refers to an meditative state associated with Śiva.}, just as the seed of the banyan tree scattered onto the ground [always] becomes a tree.
 %       \footnote{In rituals the banyan tree (\textit{nygarodha}) is associated with the \textit{kṣatriya} class (\citeauthor[1998:27]{smith1998}).} 
      \end{tlate}
      \begin{tlate}[21_4]
-\paragraph{\uproman{21}.4} By nature [the reality of Śāṃbhavī] is not only seen as one [but] has been fabricated tenfold. [Just as] the branches, buds and twigs are [held] up by the stem of the roots and shoots. [\ldots]
+\paragraph{\uproman{21}.4} By nature [the reality of Śaṃbhu] is not only seen as one [but] has been fabricated tenfold. [Just as] the branches, buds and twigs are [held] up by the stem of the roots and shoots. [\ldots]
 \end{tlate}
     \begin{tlate}[21_5]
-      \paragraph{\uproman{21}.5} [\ldots] The sap, flower [and] fruit are in the seed. This is the extent [of it] by nature. And so it is pure, eternal, unchanging, and immaculate.
+      \paragraph{\uproman{21}.5} [\ldots] The resin, flower [and] fruit are in the seed. This is the extent [of it] by nature. And so it is pure, eternal, unchanging, and immaculate.
 %\flushpage 
     \end{tlate}
 \end{translation}
@@ -688,8 +687,8 @@ evaṃ
        \app{\lem[wit={ceteri}]{bhedaṃ}
          \rdg[wit={B}]{bheda}
          \rdg[wit={D,N1}]{bhedāṃ}}
-dūrī\app{\lem[wit={U2},alt={°kṛtyaṃ}]{kṛtyaṃ}
-  \rdg[wit={ceteri}]{°kṛtya}
+       dūrī\app{\lem[wit={ceteri}, alt={°kṛtya}]{kṛtya}
+  \rdg[wit={U2}]{°kṛtyaṃ}
   \rdg[wit={E}]{°kṛty}}
 \app{\lem[wit={P}]{aikyena}
   \rdg[wit={E}]{aikam eva}
@@ -718,7 +717,8 @@ darśanaṃ
 %------------------------------
 \app{\lem[wit={ceteri}]{tasya}
   \rdg[wit={U1}]{gatasya}}
-\app{\lem[wit={ceteri}, alt={kāraṇāt}]{kāraṇā\skp{t-kā}}
+\app{\lem[wit={ceteri}, alt={karaṇāt}]{karaṇā\skp{t-kā}}
+  \rdg[wit={E,P}]{kāraṇāt}
   \rdg[wit={U1}]{dhyānakaraṇāt}
 }\app{\lem[wit={ceteri}, alt={kālaḥ}]{\skm{t-kā}laḥ}
   \rdg[wit={U1}]{kāla°}}
@@ -731,15 +731,15 @@ karoti\dd{}\linelabel{_142e}
   \end{edition}
   \begin{translation}
     \begin{tlate}[21_6]
-     \paragraph{\uproman{21}.6} One, not one, self-existing by its own power, abiding in multiplicity, as five [gross] elements (\textit{tattva})\footnote{The term \textit{pañcatattva} refers to the five gross elements. The concept of five gross elements emerging from a supreme god is found in tantric works, cf. e.g. \citetitle{sivasvarodaya} 6-8 (\textit{nirañjano nirākara eko devo maheśvaraḥ} | \textit{tasmād ākāśam utpannam ākāśād vāyusambhavaḥ} || 6 || \textit{vayos tejas tataś cāpas tataḥ pṛthvī samudbhavaḥ} | \textit{etāni pañcatattvāni vistīrṇāni ca pañcadhā} || 7 || \textit{tebhyo brahmāṇḍam utpannaṃ tair eva parivartate} | \textit{vilīyate ca tatraiva tatraiva ramate punaḥ} || 8 ||) “Faultless and without a body is the one god, the great supreme ruler. From him, the ether element (\textit{ākāśa}) originated, and from the ether element, the air element came into existence (6). From the air element, the fire element and from the fire element, the water element and from the water element, the earth element. These five elements unfold in a fivefold manner (7). From these five elements, the universe has arisen, evolves and dissolves. [Then] right here, right there [it] enjoys again (8).” } thinking mind (\textit{manas}), intellect (\textit{buddhi}), illusion (\textit{māya}), individuation (\textit{ahaṃkāra}), and modifications (\textit{vikriyā}).\footnote{In the tantric traditions of Śaivism tenfold \textit{tattva}-systems existed from an very early age, cf. \citeauthor[2016:82-85]{goodall2016}. Rāmacandra, as can be seen in the sources of the edition for this passage, is faithful to his source text. However, the exact origin of this specific arrangement of \textit{tattva}s remains unknown. Usually \textit{vikriyā} is not a separate \textit{tattva}, but \textit{ahaṃkāravikrīya} (“transformations of \textit{ahaṃkāra}”) refers to lesser \textit{tattva}s like the \textit{jñānendrīya}s, \textit{karmendrīya}s and \textit{tanmātra}s. Here, it seems the term \textit{vikriyā} is taken as a \textit{tattva} on its own, functioning as a placeholder for the modifications of \textit{ahaṃkāra}.}
+     \paragraph{\uproman{21}.6} [It] is one, [and] not one, self-existing and exists as many things by its own power, [as] five [gross] elements (\textit{tattva})\footnote{The term \textit{pañcatattva} refers to the five gross elements. The concept of five gross elements emerging from a supreme god is found in tantric works, cf. e.g. \citetitle{sivasvarodaya} 6-8 (\textit{nirañjano nirākara eko devo maheśvaraḥ} | \textit{tasmād ākāśam utpannam ākāśād vāyusambhavaḥ} || 6 || \textit{vayos tejas tataś cāpas tataḥ pṛthvī samudbhavaḥ} | \textit{etāni pañcatattvāni vistīrṇāni ca pañcadhā} || 7 || \textit{tebhyo brahmāṇḍam utpannaṃ tair eva parivartate} | \textit{vilīyate ca tatraiva tatraiva ramate punaḥ} || 8 ||) “Faultless and without a body is the one god, the great supreme ruler. From him, the ether element (\textit{ākāśa}) originated, and from the ether element, the air element came into existence (6). From the air element, the fire element and from the fire element, the water element and from the water element, the earth element. These five elements unfold in a fivefold manner (7). From these five elements, the universe has arisen, evolves and dissolves. [Then] right here, right there [it] enjoys again (8).” } thinking mind (\textit{manas}), intellect (\textit{buddhi}), illusion (\textit{māya}), individuation (\textit{ahaṃkāra}), and modifications (\textit{vikriyaḥ}).\footnote{In the tantric traditions of Śaivism tenfold \textit{tattva}-systems existed from an very early age, cf. \citeauthor[2016:82-85]{goodall2016}. Rāmacandra, as can be seen in the sources of the edition for this passage, is faithful to his source text. However, the exact origin of this specific arrangement of \textit{tattva}s remains unknown. Usually \textit{vikriya} is not a separate \textit{tattva}, but \textit{ahaṃkāravikrīya} (“transformations of \textit{ahaṃkāra}”) refers to lesser \textit{tattva}s like the \textit{jñānendrīya}s, \textit{karmendrīya}s and \textit{tanmātra}s. Here, it seems the term \textit{vikriya} is taken as a \textit{tattva} on its own, functioning as a placeholder for the modifications of \textit{ahaṃkāra}.}
 % In \citetitle{kumbhaka} 122, a technique of breath retention is dedicated to the five \textit{tattva}s (\textit{tatvādau pūreyed vāyuṃ tat tatvānte virecayet} | \textit{tatvakumbhaḥ sa gaditaḥ pañcadhā tatvabhedataḥ} || 122 ||) “One shall inhale before [the rise] of a particular \textit{tattva} and exhale at the end of that \textit{tattva}. This is called \textit{tattvakumbhaka} being five-fold according to the five divisions of \textit{tattva}.'' The \citetitle{sivasvarodaya} discusses the rise, duration, properties and application of the \textit{tattva}s in greater detail. An overview of this can be seen in \citeauthor[2021: Appendix-\lowroman{3}]{kumbhaka}.
    \end{tlate}
    \begin{tlate}[21_7]
   \paragraph{\uproman{21}.7} Thus, everything is tenfold extending\footnote{The manuscripts read \textit{savistara}, which is nonsensical in this context. Thus, I emended according to the source text’s reading.} as far as the Lokāloka[-mountain].\footnote{\citeauthor{birch2013} suggested to understand \textit{lokāloka} as the mythical mountain that divides the visible world from the regions of darkness. Cf. and see \citeauthor{apte1890practical} (1980: 933) for further references.} There is only one. There is nothing else. One who knows this is a knower of truth.
      \\\\
      \end{tlate}
-\begin{tlate}[p21_02]
- The circuit of mundane existence has the nature of stationary [existances] such as earth, trees, mountains, etc. The circuit of mundane existence has the nature of the mobile [existances] such as humans, elephants, horses, birds, etc. Now, that which is the object of sight is called the seen. That which is not seen by sight is called the unseen. In this way, the removal of the distinction of the own self from the circuit of mundane existance is to be done by means ofobservation with identity. Only this is Jñānayoga. From the execution of this, time [as death] does not bring about the destruction of the body.
+     \begin{tlate}[p21_02]
+       The stationary circuit of mundane existence consists of earth, trees, mountains, etc. The moving circuit of mundane existence consists of humans, elephants, horses, birds, etc. Now, that which is the object of sight is called the visible. That which is not seen by sight is called the invisible. In this way, through the vision of unity, the distinction of one's self from the circuit of mundance existence is to be removed. Only this is Jñānayoga. From the execution of this, time [as death] does not bring about the destruction of the body.
  \flushpage
     \end{tlate}
   \end{translation}
@@ -800,7 +800,7 @@ karoti\dd{}\linelabel{_142e}
 %------------------------------
 %Now, the division of the inherent being is described. 
 %------------------------------  
-\note[type=source, labelb=_143i, labele=_145e, nosep]{cf. YSv (PT p. 836): svabhāvabhedam etat śṛṇu devi prayatnataḥ | yac chrutvā sarvabodhaḥ syāt muktidaḥ siddhivāñchitaḥ | ātmano vā pṛthivyādyāḥ svabhāvaḥ kiñcid ucyate | ātmaiva pṛthivī dhātrī komalā ca kvacid dṛḍhā | kvacin manoharā sā ca vimalā ca malāmalā | durgandhā ca sugandhā ca nirgandhā gandhamohinī | svarṇarūpā dhāturūpā citrā ratnamayī parā | kvacit śvetā kvacid raktā kvacit pītā ca kṛṣṇalā | ūrvarā ūrvarā sā tu viṣāmṛtamayī sadā |}
+\note[type=source, labelb=_143i, labele=_145e, nosep]{cf. YSv (PT p. 836): svabhāvabhedam etat śṛṇu devi prayatnataḥ | yac chrutvā sarvabodhaḥ syāt muktidaḥ siddhivāñchitaḥ | ātmano vā pṛthivyādyāḥ svabhāvaḥ kiñcid ucyate |}
 \linelabel{_143i}
 \app{\lem[wit={ceteri}]{idānīṃ}
   \rdg[wit={B}]{idānī}}
@@ -836,13 +836,14 @@ yathā
       \app{\lem[wit={B,L,U2}]{pariṇamate}
         \rdg[wit={P}]{pariṇāte}
         \rdg[wit={X,E}]{pariṇataṃ}}
-      \app{\lem[wit={U1},alt={sa tat}]{sa ta\skp{t-da}}
+      \app{\lem[type=emendation, resp=egoscr, alt={sa tad}]{sa ta\skp{d-da}}
+        \rdg[wit={U1},alt={sa tat}]{sa tat}
         \rdg[wit={N2}]{sa tu}
         \rdg[wit={N1}]{satṛ}
         \rdg[wit={E,P}]{sat}
         \rdg[wit={B,L}]{śata}
         \rdg[wit={D,U2}]{sa}
-      }\app{\lem[wit={ceteri},alt={daśadhā}]{\skm{t-da}śadhā}
+      }\app{\lem[wit={ceteri},alt={daśadhā}]{\skm{d-da}śadhā}
         \rdg[wit={P}]{dṛśadhā}
         \rdg[wit={U2}]{dasat}}
       \app{\lem[wit={ceteri}]{bhedaṃ}
@@ -880,8 +881,8 @@ yathā
           \rdg[wit={U2}]{\om}}
         \app{\lem[wit={ceteri}]{iti}
           \rdg[wit={U2}]{\om}}
-        \app{\lem[wit={X}]{bhedo daśadhā}
-          \rdg[wit={B,E,L,P}]{daśabhedān}
+        \app{\lem[wit={B,E,L,P}]{daśabhedān}
+          \rdg[wit={X}]{bhedo daśadhā}
           \rdg[wit={U2}]{\om}}
         \app{\lem[wit={ceteri}]{prāpnoti}
           \rdg[wit={P}]{prāpnotīti}
@@ -915,7 +916,8 @@ yathā
           \app{\lem[wit={ceteri}, alt={ātmasvabhāvād}]{ātmasvabhāvā\skp{d-e}}
             \rdg[wit={E}]{ātmā svabhāvād}
           }\skm{d-e}va
-          \app{\lem[wit={B,L,N1}, alt={pṛthvyāpatejovāybākāśamanobuddhimāyāvikārarūpābhedān}]{pṛthvyāpatejovāybākāśamanobuddhimāyāvikārarūpābhedā\skp{n-prā}}
+          \app{\lem[wit={B,L}, alt={pṛthvyāpatejovāyvākāśamanobuddhimāyāvikārarūpabhedān}]{pṛthvyāpatejovāyvākāśamanobuddhimāyāvikārarūpabhedā\skp{n-prā}}
+            \rdg[wit={N1}]{pṛthvyāpatejovāyvākāśamanobuddhimāyāvikārarūpābhedān}
             \rdg[wit={E}]{pṛthivyapāpatejovāybākāśamanobuddhimāyāvikārarūpābhedān}
             \rdg[wit={P}]{pṛthvyetetejovādvyākāśamanobuddhimāyāvikārarūpābhedān}
             \rdg[wit={D,N2}]{pṛthvīpate | jīvīkāśamanobuddhir māyāvikārarūpabhedāt}
@@ -956,7 +958,7 @@ yathā
  \xmlhead[h22]{[XXII. Division of the Inherent Being]}
         \begin{tlate}[p22_01]
             \noindent
-   Now, the division of the inherent being\footnote{The term \textit{svabhāvabheda} is a popular term in philosophical systems to signify the division or distinction of essential natures. For a Buddhist example, see \citeauthor{balcerowicz2011dharmakirti} (2011: 6 ff.). In some Nyāya texts, the term is used to signify different essential properties of the self, cf., i.e. \citeauthor{ogawa2023perception} (2023: 162). In the \textit{Netratantantra}, the term \textit{bhāvabheda} occurs frequently in a similar sense as in this passage of the \textit{Yogatattvabindu}. For example cf. \textit{Netratantra} 16.20-21 (\textit{bhaviṣyanti mahādevi kaliḥ kaṣṭataro yataḥ} | \textit{tadarthaṃ paramārtho 'yaṃ mayā te prakaṭīkṛtaḥ} | \textit{paramārthaḥ paratvena mṛtyujit sarvatomukhaḥ} | \textit{bhāvabhedena yaṣṭavyo mokṣasiddhim abhīpsatā} |).} is described. Just as the seed of the banyan tree ripens into the shape of the banyan tree, [and] because of its own inherent being develops such a tenfold division - root, shoot, bark, branch, twig, bud, the unfolding flower, flower, fruit and nectar. The division develops [those] ten parts. In the same way, the pure, unchanging, unblemished [one] attains such [a division] precisely because of the inherent being of the self. [Namely], the division: earth, water, fire, wind, space, mind, intellect, illusion, transformations and form.\footnote{Rāmacandra’s tenfold taxonomy of \textit{tattva}s appears inconsistent. Here, besides the stable list of the five gross elements, \textit{ahaṃkāra} is replaced with \textit{rūpa} and the order of the other elements is changed. None of the tenfold \textit{tattva}-systems known to me equal Rāmacandra's systems exactly. Taxonomies of \textit{tattva}s like \citetitle{bhagavadgita} 7.4 in which Kṛṣṇa presents a list of eight divisions of \textit{prakṛti} are almost identical (\textit{bhūmir āpo 'nalo vāyuḥ khaṃ mano buddhir eva cha} | \textit{ahankāra itīyaṃ me bhinnā prakṛitir aṣhṭadhā} ||7.4||). "Earth, water, fire, air, space, mind, intellect, and ego - these are the eight divisions of the original nature." In this list, we find most of the elements of Rāmacandra's list, except terms like \textit{māyā}, \textit{vikriyā} or \textit{rūpā}. The description of \textit{kuṇḍalinī} in \citetitle{yajnavalkya} 4.21 picks up this system. Another system of ten \textit{tattva}s appears in \textit{Uttarasūtra} 1.9 - 1.13 of the \citetitle{nishvasa2015} in which the tenfold nature of Sadāśiva is homologised with the \textit{mantra}. Here the following list is given: \textit{prakṛti}, \textit{puruṣa}, \textit{niyati}, \textit{kāla}, \textit{māyātattva}, \textit{vidyā}, \textit{Īśvara}, \textit{Sadāśiva}, \textit{dehavyāpin} and \textit{Śakti}, cf. \citeauthor[2016: 83-84]{goodall2016}. There is no similarity between the two tenfold \textit{tattva}-systems. However, since Rājayoga is rooted in ancient Śaivsim (see \citeauthor{birch2019saiva} 2019), and Rāmacandra usually tends to present simplified and transsectarian systems, the choice of a tenfold \textit{tattva}-system might be a remnant of those ancient systems.} Because of the power of Jñānayoga, the conviction arises that `the self is only one'. 
+   Now, the nature of the self and it's distinction\footnote{One comes across the term \textit{svabhāvabheda} in philosophical systems to signify the division or distinction of essential natures. For a Buddhist example, see \citeauthor{balcerowicz2011dharmakirti} (2011: 6 ff.). In some Nyāya texts, the term is picked up to refer to different essential properties of the self, cf., i.e. \citeauthor{ogawa2023perception} (2023: 162). In the \textit{Netratantantra}, the term \textit{bhāvabheda} occurs frequently in a similar sense as in this passage of the \textit{Yogatattvabindu}. For example cf. \textit{Netratantra} 16.20-21 (\textit{bhaviṣyanti mahādevi kaliḥ kaṣṭataro yataḥ} | \textit{tadarthaṃ paramārtho 'yaṃ mayā te prakaṭīkṛtaḥ} | \textit{paramārthaḥ paratvena mṛtyujit sarvatomukhaḥ} | \textit{bhāvabhedena yaṣṭav yo mokṣasiddhim abhīpsatā} |). Here, however, the context is unphilosophical and specifically intended to signify the phenomenological distinction of the self.} is described. Just as the seed of the banyan tree transforms into the shape of the banyan tree - just so, due to its nature it attains a tenfold distinction, `Root, shoot, bark, branch, twig, bud, the unfolding flower, flower, fruit and resin' are the ten distinctions [it] attains. In the same way, the pure, unchanging, immaculate one attains as such precisely because of the nature of the self - [namely], the divisions of earth, water, fire, wind, space, mind, intellect, illusion, transformations, and form.\footnote{Rāmacandra’s tenfold taxonomy of \textit{tattva}s appears inconsistent. Here, besides the stable list of the five gross elements, \textit{ahaṃkāra} is replaced with \textit{rūpa} and the order of the other elements is changed. None of the tenfold \textit{tattva}-systems known to me equal Rāmacandra's systems exactly. Taxonomies of \textit{tattva}s like \citetitle{bhagavadgita} 7.4 in which Kṛṣṇa presents a list of eight divisions of \textit{prakṛti} are almost identical (\textit{bhūmir āpo 'nalo vāyuḥ khaṃ mano buddhir eva cha} | \textit{ahankāra itīyaṃ me bhinnā prakṛitir aṣhṭadhā} ||7.4||). "Earth, water, fire, air, space, mind, intellect, and ego - these are the eight divisions of the original nature." In this list, we find most of the elements of Rāmacandra's list, except terms like \textit{māyā}, \textit{vikāra} or \textit{rūpa}. The description of \textit{kuṇḍalinī} in \citetitle{yajnavalkya} 4.21 picks up this system. Another system of ten \textit{tattva}s appears in \textit{Uttarasūtra} 1.9 - 1.13 of the \citetitle{nishvasa2015} in which the tenfold nature of Sadāśiva is homologised with the \textit{mantra}. Here the following list is given: \textit{prakṛti}, \textit{puruṣa}, \textit{niyati}, \textit{kāla}, \textit{māyātattva}, \textit{vidyā}, \textit{Īśvara}, \textit{Sadāśiva}, \textit{dehavyāpin} and \textit{Śakti}, cf. \citeauthor[2016: 83-84]{goodall2016}. There is no similarity between the two tenfold \textit{tattva}-systems. However, since Rājayoga is rooted in ancient Śaivsim (see \citeauthor{birch2019saiva} 2019), and Rāmacandra usually tends to present simplified and transsectarian systems, the choice of a tenfold \textit{tattva}-system might be a remnant of those ancient systems.} Because of the power of Jñānayoga, the conviction arises that `the self is only one'. 
             \flushpage 
             \end{tlate}
   \end{translation}
@@ -1010,6 +1012,8 @@ yathā
 %------------------------------
 %As some particular soil (\textit{ekaika}) sometimes appears soft, sometimes appears beautiful, sometimes fragrant, sometimes unscented, sometimes golden, sometimes silver,... 
 %------------------------------
+\note[type=source, labelb=_143i, labele=_144ie, nosep]{cf. YSv (PT p. 836): ātmaiva pṛthivī dhātrī komalā ca kvacid dṛḍhā | kvacin manoharā sā ca vimalā ca malāmalā | durgandhā ca sugandhā ca nirgandhā gandhamohinī | svarṇarūpā dhāturūpā citrā ratnamayī parā | kvacit śvetā kvacid raktā kvacit pītā ca kṛṣṇalā | ūrvarā ūrvarā sā tu viṣāmṛtamayī sadā |}
+\linelabel{_143i}
 \app{\lem[type=emendation, resp=egoscr]{yathaikaikaḥ}
   \rdg[wit={E}]{yathaikaiva}
   \rdg[wit={B,L,P,U2}]{yathā ekaika}
@@ -1137,6 +1141,8 @@ kvaci\skp{d-ra}\app{\lem[wit={ceteri},alt={ratnamayī}]{\skm{d-ra}tnamayī}
 \app{\lem[wit={ceteri}]{bhavati}
   \rdg[wit={B,L}]{bhavataḥ}
   \rdg[wit={U1}]{\om}}\dd{}
+\linelabel{_144ie}
+\\\\
 %------------------------------
 %tathaivātmā   manuṣyapakṣihariṇahastividyādharagandharvakinnaramahāpaṃḍitamahāmūrkha  rogyarogikrodhi---śāṃtarūpaḥ      svabhāvād eva bhavati/ \E
 %tathaivātmā   manuṣyapakṣihariṇāhastividyādharagaṃdharvakinnaramahāpiṃḍitamahārmūkha  rogī-----krodhi---śāṃtarūpāḥ      svabhāvād eva bhavati \P
@@ -1188,7 +1194,7 @@ kvaci\skp{d-ra}\app{\lem[wit={ceteri},alt={ratnamayī}]{\skm{d-ra}tnamayī}
 \app{\lem[wit={ceteri}]{bhavati}
   \rdg[wit={B,L}]{bhavatī}
   \rdg[wit={N1}]{bhati}
-  \rdg[wit={D}]{dharati}}\dd{}
+  \rdg[wit={D}]{dharati}}\dd{}\\\\
 %------------------------------      
 %jñānayogādhikārarūparahito  jñāyate/  yathā plakṣasyotpattiḥ/ sthānam eva bhavati// \E
 %jñānayogādhikārarūparahito  jñāyate   yathā phalasyotpattisthānam ekam eva bhavati \P  %%%7643.jpg        
@@ -1214,9 +1220,10 @@ kvaci\skp{d-ra}\app{\lem[wit={ceteri},alt={ratnamayī}]{\skm{d-ra}tnamayī}
       \noindent
 Just as some particular soil sometimes appears soft, sometimes appears beautiful, sometimes fragrant, sometimes unscented, sometimes golden, sometimes silver, 
 is sometimes made of precious stone, sometimes appearing white, sometimes black, sometimes copper, sometimes yellow, sometimes mottled, sometimes like various fruit, 
-sometimes like flowers, sometimes like the nectar of immortality, [and that only] because of its inherent being. 
+sometimes like flowers, sometimes like the nectar of immortality, [and that only] because of its inherent being. \\\\
 In this way, the self also takes the form of a human, a bird, a gazelle, an elephant, a Vidyādhara, a Gandharva, a centaur, a great scholar or a great fool, 
-a sick or healthy, an angry or peaceful person, by virtue of its inherent nature. Through Jñānayoga he realises the emptiness of the mutability of form. 
+a sick or healthy, an angry or peaceful person, by virtue of its inherent nature. \\\\
+Through Jñānayoga he realises the emptiness of the mutability of form. 
 \flushpage
 \end{tlate}
   \end{translation}
@@ -1845,7 +1852,7 @@ a sick or healthy, an angry or peaceful person, by virtue of its inherent nature
   the shade from the tree, the sweet odour from a fruit, the fire from a scabbard,
    the sweet sap of Śārkara\footnote{A liquor prepared from Dhātakī with sugar. Beleg?} 
    and so on, the cold of piles of snow, and so on is the inherent essence of things.
-   In the same way, the course of the world is also in the centre of the highest God's own form. 
+   In the same way, the circuit of mundane existance is within the highest God's own nature. 
    Moreover, the highest God is indivisible and all-filling.
   \label{endsvabhava}
    \flushpage 
